# pycapsule-demo

./: Cargo.toml  README.md  data.csv  pyproject.toml  run.py
src/: lib.rs
